@@ -1,3 +1,8 @@
+(06/30/09)
+*** New parameter -condor-g for swift-osg-ress-site-catalog which causes
+    sites files to be generate which will use a local condor-g installation
+    instead of making direct GRAM submissions.
+
 (06/25/09)
 *** 'global' keyword to allow top level declarations to be visible in all
     scopes.
